--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Will You be my best friend 🤗</h1>
+      <h1>Will You be my love💖💖🤗</h1>
       <p>best friend🥹🤌🏻</p>
 
       <div class="btn">
