--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Will You be my bestie💖💖🤗</h1>
-      <p>best friend🥹🤌🏻</p>
+      <h1>Will You be my hubby💖💖🤗</h1>
+      <p>best husband🥹🤌🏻</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
