--- a/no3.html
+++ b/no3.html
@@ -30,7 +30,7 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Manjaou na! Kitna bhav khaouge 😭</h1>
+      <h1>Manjaou na! Kitna bhav khaougi 😭</h1>
       <p>😩😩</p>
 
       <div class="btn">
