--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Will You be mine💖💖🤗</h1>
-      <p>my forever🥹🤌🏻</p>
+      <h1>microsoft chalegi na is saturday💖💖🤗</h1>
+      <p>sundar dost🥹🤌🏻</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
