--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>microsoft chalegi na is saturday💖💖🤗</h1>
+      <h1>mere permanent best friend banegi💖💖🤗</h1>
       <p>sundar dost🥹🤌🏻</p>
 
       <div class="btn">
